quantalys.customer/init-namespace/templates/networkpolicy-istio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-istio-system
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
      # Allow from all pods from istio-system
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: istio-system
        podSelector: {}
